DFC-215 Wild Oceans: alignment of slider nav arrows/bars needs to be fixed

--- a/sites/all/themes/custom/dfc/css/dfc.no-query.css
+++ b/sites/all/themes/custom/dfc/css/dfc.no-query.css
@@ -5835,12 +5835,14 @@ body.section-wild-oceans {
     /* line 218, C:/xampp/htdocs/dollar-fishing/sites/all/themes/custom/dfc/sass/components/_page-wild-oceans.scss */
     body.section-wild-oceans .owl-controls .owl-buttons .owl-prev {
       top: 95% !important;
-      left: 39% !important; }
-    /* line 225, C:/xampp/htdocs/dollar-fishing/sites/all/themes/custom/dfc/sass/components/_page-wild-oceans.scss */
+      left: 39% !important;
+      margin-top: 10px !important; }
+    /* line 229, C:/xampp/htdocs/dollar-fishing/sites/all/themes/custom/dfc/sass/components/_page-wild-oceans.scss */
     body.section-wild-oceans .owl-controls .owl-buttons .owl-next {
       top: 95% !important;
+      margin-top: 10px !important;
       right: 39% !important; }
-    /* line 233, C:/xampp/htdocs/dollar-fishing/sites/all/themes/custom/dfc/sass/components/_page-wild-oceans.scss */
+    /* line 242, C:/xampp/htdocs/dollar-fishing/sites/all/themes/custom/dfc/sass/components/_page-wild-oceans.scss */
     body.section-wild-oceans .owl-controls .owl-buttons .owl-prev,
     body.section-wild-oceans .owl-controls .owl-buttons .owl-next {
       position: absolute;
@@ -5874,7 +5876,7 @@ body.section-wild-oceans {
 					left: 20%;
 			  }
         */ }
-    /* line 261, C:/xampp/htdocs/dollar-fishing/sites/all/themes/custom/dfc/sass/components/_page-wild-oceans.scss */
+    /* line 270, C:/xampp/htdocs/dollar-fishing/sites/all/themes/custom/dfc/sass/components/_page-wild-oceans.scss */
     body.section-wild-oceans .owl-controls .owl-buttons .owl-next {
       left: auto;
       right: 5%;
@@ -5901,18 +5903,18 @@ body.section-wild-oceans {
 			  }
         */ }
 
-/* line 286, C:/xampp/htdocs/dollar-fishing/sites/all/themes/custom/dfc/sass/components/_page-wild-oceans.scss */
+/* line 295, C:/xampp/htdocs/dollar-fishing/sites/all/themes/custom/dfc/sass/components/_page-wild-oceans.scss */
 .block--bean-wild-oceans-cta {
   position: relative;
   text-align: center; }
-  /* line 290, C:/xampp/htdocs/dollar-fishing/sites/all/themes/custom/dfc/sass/components/_page-wild-oceans.scss */
+  /* line 299, C:/xampp/htdocs/dollar-fishing/sites/all/themes/custom/dfc/sass/components/_page-wild-oceans.scss */
   .block--bean-wild-oceans-cta .home-cta {
     background: #f1592a url(../images/wildoceans-orangebar.jpg) no-repeat 50% 50%;
     background-size: cover;
     padding: 31px 30px;
     position: relative;
     text-transform: uppercase; }
-    /* line 320, C:/xampp/htdocs/dollar-fishing/sites/all/themes/custom/dfc/sass/components/_page-wild-oceans.scss */
+    /* line 329, C:/xampp/htdocs/dollar-fishing/sites/all/themes/custom/dfc/sass/components/_page-wild-oceans.scss */
     .block--bean-wild-oceans-cta .home-cta .home-cta-title {
       color: #ffffff;
       font-family: "dangerregular", Helvetica, sans-serif;
@@ -5920,13 +5922,13 @@ body.section-wild-oceans {
       font-size: 2.25rem;
       line-height: 1;
       margin-bottom: 10px; }
-    /* line 339, C:/xampp/htdocs/dollar-fishing/sites/all/themes/custom/dfc/sass/components/_page-wild-oceans.scss */
+    /* line 348, C:/xampp/htdocs/dollar-fishing/sites/all/themes/custom/dfc/sass/components/_page-wild-oceans.scss */
     .block--bean-wild-oceans-cta .home-cta .home-cta-link a {
       background: #000000;
       font-family: "tradegothic-bold-condensed20", Georgia, serif;
       font-size: 15px;
       font-size: 0.9375rem; }
-      /* line 346, C:/xampp/htdocs/dollar-fishing/sites/all/themes/custom/dfc/sass/components/_page-wild-oceans.scss */
+      /* line 355, C:/xampp/htdocs/dollar-fishing/sites/all/themes/custom/dfc/sass/components/_page-wild-oceans.scss */
       .block--bean-wild-oceans-cta .home-cta .home-cta-link a:hover {
         background: #272727;
         border-color: #272727; }
